--- a/icalculator.kv
+++ b/icalculator.kv
@@ -1,24 +1,26 @@
 #: import utils kivy.utils
-#:set size "42sp"
+#:set my_default_icon_size "42sp"
 
 <OrangeButton>:
-    icon: "numeric-4"
+    # a custom MDIconButton-class for the buttons with an orange color
+    icon_size: my_default_icon_size
     md_bg_color:  self.initial_colors["md_bg_color"]
     theme_icon_color: "Custom"
+    # some parameters to make the ripple-effect similar to that of the iPhone's calculator app
     ripple_duration_in_fast: .15
     ripple_duration_in_slow: 10
     ripple_alpha: 0.5
     ripple_color: 1,1,1,1
     ripple_rad_default: 150
-    icon_size: size
+
 
 <GrayButton@MDIconButton>:
-    icon: "numeric-4"
-    icon_size: size
+    # a custom MDIconButton-class for the buttons with an gray color
+    icon_size: my_default_icon_size
     theme_icon_color: "Custom"
-
     icon_color: 0,0,0,1
     md_bg_color: utils.get_color_from_hex("#a5a5a5")
+    # some parameters to make the ripple-effect similar to that of the iPhone's calculator app
     ripple_duration_in_fast: .24
     ripple_duration_in_slow: 10
     ripple_alpha: 0.5
@@ -26,9 +28,10 @@
     ripple_rad_default: 150
 
 <BlackButton@MDIconButton>:
-    icon: "numeric-4"
-    icon_size: size
+    # a custom MDIconButton-class for the buttons with an black color
+    icon_size: my_default_icon_size
     md_bg_color: utils.get_color_from_hex("#333333")
+    # some parameters to make the ripple-effect similar to that of the iPhone's calculator app
     ripple_duration_in_fast: .24
     ripple_duration_in_slow: 10
     ripple_alpha: 0.5
@@ -42,17 +45,15 @@ HomeScreen:
     MDBoxLayout:
         orientation: "vertical"
         padding: dp(11), dp(17), dp(11), dp(7)
-#        Widget:
-#            size_hint_y: None
-#            height: dp(8)
+
         FloatInput:
             id: input_field
             text: "0"
             _eval_text: ""
-            size_hint: 1,.27
+            size_hint: 1,.3
             multiline: False
             cursor_blink: False
-            font_size: "55sp"
+            font_size: "59sp"
             halign: "right"
             cursor_color: 0,0,0,1
             foreground_color: 1,1,1,1
@@ -63,24 +64,27 @@ HomeScreen:
 
         MDBoxLayout:
             orientation: "vertical"
-            spacing: 0
-            padding: 1
+            spacing:
+            padding:
 
             MDGridLayout:
                 cols: 4
                 spacing: "10dp"
+
                 GrayButton:
                     icon: "format-clear"
                     id: btn_clear
                     on_press: input_field.clear()
 
                 GrayButton:
+                    # todo: make this button work
                     icon: "plus-minus"
                     id: btn_plus_minus
+
                 GrayButton:
+                    # todo: make this button work
                     id: btn_percent
                     icon: "percent-box-outline"
-
 
                 OrangeButton:
                     icon: "division"
@@ -93,6 +97,7 @@ HomeScreen:
             MDGridLayout:
                 cols: 4
                 spacing: "10dp"
+
                 BlackButton:
                     icon: "numeric-7"
                     id: btn_7
@@ -106,6 +111,7 @@ HomeScreen:
                     value_num: 8
                     value_str: "8"
                     on_release: input_field.add_to_input(self)
+
                 BlackButton:
                     id: btn_9
                     value_num: 9
@@ -124,18 +130,21 @@ HomeScreen:
             MDGridLayout:
                 cols: 4
                 spacing: "10dp"
+
                 BlackButton:
                     icon: "numeric-4"
                     id: btn_4
                     value_num: 4
                     value_str: "4"
                     on_release: input_field.add_to_input(self)
+
                 BlackButton:
                     icon: "numeric-5"
                     id: btn_5
                     value_num: 5
                     value_str: "5"
                     on_release: input_field.add_to_input(self)
+
                 BlackButton:
                     id: btn_6
                     icon: "numeric-6"
@@ -154,6 +163,7 @@ HomeScreen:
             MDGridLayout:
                 cols: 4
                 spacing: "10dp"
+
                 BlackButton:
                     icon: "numeric-1"
                     id: btn_1
@@ -167,6 +177,7 @@ HomeScreen:
                     value_num: 2
                     value_str: "2"
                     on_release: input_field.add_to_input(self)
+
                 BlackButton:
                     id: btn_3
                     icon: "numeric-3"
@@ -181,16 +192,17 @@ HomeScreen:
                     on_release:
                         self.change_colors(btn_equal,btn_division,btn_minus,btn_multiply)
                         input_field.add_to_input(self)
+
             MDGridLayout:
                 cols: 4
                 spacing: "10dp"
+
                 BlackButton:
                     icon: "numeric-0"
                     id: btn_zero
                     value_num: 0
                     value_str: "0"
                     on_release: input_field.add_to_input(self)
-
 
                 BlackButton:
                     id: btn_dot
@@ -199,7 +211,6 @@ HomeScreen:
                     value_str: "."
                     on_release: input_field.add_to_input(self)
 
-
                 OrangeButton:
                     icon: "equal"
                     value_str: "="
@@ -207,4 +218,3 @@ HomeScreen:
                         self.change_colors(btn_division,btn_plus,btn_minus,btn_multiply)
                         input_field.add_to_input(self)
                     id: btn_equal
-
